Api Bulk DataSets
Implimentacion de api Bulk de carga masiva.
Generador de lote Python
Conversor UTF-8  python